Autoplay, temporarily comment out unnecessary example code

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
           height: '390',
           width: '640',
           videoId: 'UeRLiocSkog',
+          playerVars: { 'autoplay': 1, 'controls': 1 },
           events: {
             'onReady': onPlayerReady,
             'onStateChange': onPlayerStateChange
@@ -43,7 +44,7 @@
 
       // 4. The API will call this function when the video player is ready.
       function onPlayerReady(event) {
-        event.target.playVideo();
+        // event.target.playVideo();
       }
 
       // 5. The API calls this function when the player's state changes.
@@ -51,11 +52,11 @@
       //    the player should play for six seconds and then stop.
       var done = false;
       function onPlayerStateChange(event) {
-        console.log(event.target.getCurrentTime() / 60);
-        if (event.data == YT.PlayerState.PLAYING && !done) {
-          setTimeout(stopVideo, 6000);
-          done = true;
-        }
+        // console.log(event.target.getCurrentTime() / 60);
+        // if (event.data == YT.PlayerState.PLAYING && !done) {
+        //   setTimeout(stopVideo, 6000);
+        //   done = true;
+        // }
       }
       function stopVideo() {
         player.stopVideo();
