Adjust iframe width to match window

--- a/index.html
+++ b/index.html
@@ -15,11 +15,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/rxjs/5.4.2/Rx.min.js"></script>
   </head>
   <body>
-    <iframe id="player"
+    <div class="video-wrapper">
+      <iframe id="player"
         width="640" height="360"
         src="https://www.youtube.com/embed/UeRLiocSkog?enablejsapi=1&autoplay=1"
         frameborder="0">
-    </iframe>
+      </iframe>
+    </div>
 
     <script>
       // 2. This code loads the IFrame Player API code asynchronously.
