Add text in the middle of the screen

--- a/index.html
+++ b/index.html
@@ -22,6 +22,14 @@
       frameborder="0">
     </iframe>
 
+    <table id="content-wrapper">
+      <tr>
+        <td>
+          <div id="content">test</div>
+        </td>
+      </tr>
+    </table>
+
     <script>
       // 2. This code loads the IFrame Player API code asynchronously.
       var tag = document.createElement('script');
