--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <meta name="author" content="">
 
     <title>Animation</title>
-
+    
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css" rel="stylesheet">
 
     <link href="styles.css" rel="stylesheet">
