Set page title to V3R - LUCYV

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Animation</title>
+    <title>V3R - LUCYV</title>
     
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     
