Implement observable emitting player current time, add simple indicator

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <table id="content-wrapper">
       <tr>
         <td>
-          <div id="content">test</div>
+          <div id="content"></div>
         </td>
       </tr>
     </table>
