Select content by class instead of id so it works on iOS

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <table id="content-wrapper">
       <tr>
         <td>
-          <div id="content"></div>
+          <div class="content"></div>
         </td>
       </tr>
     </table>
