Add embedded youtube video parameter which prevents auto-fullscreen on iOS

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <iframe id="player"
       width="640" height="360"
-      src="https://www.youtube.com/embed/UeRLiocSkog?enablejsapi=1&autoplay=1&iv_load_policy=3&loop=1&showinfo=0&playlist=UeRLiocSkog&color=white"
+      src="https://www.youtube.com/embed/UeRLiocSkog?enablejsapi=1&autoplay=1&iv_load_policy=3&loop=1&showinfo=0&playlist=UeRLiocSkog&color=white&playsinline=1"
       frameborder="0">
     </iframe>
 
