Improve content and content-wrapper styling

--- a/index.html
+++ b/index.html
@@ -24,13 +24,9 @@
       frameborder="0">
     </iframe>
 
-    <table id="content-wrapper">
-      <tr>
-        <td>
-          <div class="content"></div>
-        </td>
-      </tr>
-    </table>
+    <div id="content-wrapper">
+      <div class="content"></div>
+    </div>
 
     <script src="animation.js"></script>
   </body>
