Start implementing createSimpleTextAnimationObject

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       frameborder="0">
     </iframe>
 
-    <div id="content-wrapper">
+    <div class="content-wrapper">
       <div class="content"></div>
     </div>
 
