--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 
     <div class="content-wrapper">
       <div class="content"></div>
+      <div class="content frame"></div>
     </div>
 
     <script src="animation.js"></script>
