Move animation-library code to separate file

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
       <div class="content frame"></div>
     </div>
 
+    <script src="animation-library.js"></script>
     <script src="animation.js"></script>
   </body>
 </html>
