Simplify html layout

--- a/index.html
+++ b/index.html
@@ -24,10 +24,7 @@
       frameborder="0">
     </iframe>
 
-    <div class="content-wrapper">
-      <div class="content"></div>
-      <div class="content frame"></div>
-    </div>
+    <div class="animation"></div>
 
     <script src="ease.js"></script>
     <script src="animation-library.js"></script>
