Use getElementById instead of querySelector

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       frameborder="0">
     </iframe>
 
-    <div class="animation"></div>
+    <div id="animation"></div>
 
     <script src="ease.js"></script>
     <script src="animation-library.js"></script>
