--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
 
     <div id="animation"></div>
 
+    <script src="youtube.js"></script>
     <script src="ease.js"></script>
     <script src="animation-library.js"></script>
     <script src="animation.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
